methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:9: error: ')' expected but 'return' found.
  return false
  ^